--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,8 @@ development:
  database: nappstr
  username: root
  password: guufy999
- host: zh.swably.com
+ # host: swably.com
+ host: localhost
  encoding: utf8 
 
 # Warning: The database defined as 'test' will be erased and
