--- a/app/views/account/app_changes_en.yml
+++ b/app/views/account/app_changes_en.yml
@@ -1,5 +1,7 @@
 ---
 changes: 
+  - code: 1540
+    note: Brand new sharing feature
   - code: 1503
     note: New designed UI, more simple and more smooth user experience
   - code: 1462
