v1580 for en, add http_referer sync_twitter

--- a/app/views/account/app_changes_en.yml
+++ b/app/views/account/app_changes_en.yml
@@ -1,5 +1,7 @@
 ---
 changes: 
+  - code: 1580
+    note: Add in-stream screenshots and upload history
   - code: 1570
     note: Show uploaders of an App
   - code: 1540
