--- a/app/views/account/app_changes_en.yml
+++ b/app/views/account/app_changes_en.yml
@@ -1,5 +1,7 @@
 ---
 changes: 
+  - code: 1582
+    note: Can send app request
   - code: 1580
     note: Add in-stream screenshots and upload history
   - code: 1570
