--- a/config/database.yml
+++ b/config/database.yml
@@ -28,9 +28,15 @@ development:
  host: localhost
  encoding: utf8 
 
-# Warning: The database defined as 'test' will be erased and
-# re-generated from your development database when you run 'rake'.
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+test:
+  adapter: mysql2
+  database: nappstr_test
+  username: root
+  password: guufy999
+  host: localhost
 
 production:
   adapter: mysql2
@@ -40,6 +46,7 @@ production:
   host: localhost
   encoding: utf8 
   
+
 benchmarking:
   encoding: utf8
   username: root
