--- a/app/views/account/app_changes_en.yml
+++ b/app/views/account/app_changes_en.yml
@@ -1,5 +1,7 @@
 ---
 changes: 
+  - code: 1700
+    note: You can mention friends about a post
   - code: 1600
     note: Add thread and navigation
   - code: 1582
