--- a/app/views/account/app_changes_zh.yml
+++ b/app/views/account/app_changes_zh.yml
@@ -1,5 +1,7 @@
 ---
 changes: 
+  - code: 1811
+    note: 修复提醒没刷新的bug；
   - code: 1810
     note: 可以分享系统应用；可以取消刚刚增加的提醒；如果应用已下载就直接安装；
   - code: 1700
