--- a/app/views/account/app_changes_en.yml
+++ b/app/views/account/app_changes_en.yml
@@ -1,7 +1,7 @@
 ---
 changes: 
-  - code: 1700
-    note: You can mention friends about a post
+  - code: 1820
+    note: You can share system apps. Refine navigation.
   - code: 1600
     note: Add thread and navigation
   - code: 1582
