--- a/app/views/account/app_changes_en.yml
+++ b/app/views/account/app_changes_en.yml
@@ -1,5 +1,7 @@
 ---
 changes: 
+  - code: 1940
+    note: Can recommend Swably and invite friends
   - code: 1920
     note: intuitive buttons; improve user and app profile; save apk to sd card folder swably
   - code: 1861
