implemented app tag

--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -8,3 +8,13 @@ game:
   id: 1
   name: game
   created_at: '2014-6-19 17:46'
+
+social:
+  id: 2
+  name: social
+  created_at: '2014-6-24 10:31'
+
+market:
+  id: 3
+  name: market
+  created_at: '2014-6-24 10:32'
