--- a/test/fixtures/app_tags.yml
+++ b/test/fixtures/app_tags.yml
@@ -4,7 +4,26 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 
+# alex-swably-game
 app_tag1:
-  app_id: 1
   user_id: 1
+  app_id: 1
   tag_id: 1
+
+# alex-swably-social
+app_tag2:
+  user_id: 1
+  app_id: 1
+  tag_id: 2
+
+# dennis-swably-social
+app_tag3:
+  user_id: 2
+  app_id: 1
+  tag_id: 2
+
+# dennis-swably-market
+app_tag4:
+  user_id: 2
+  app_id: 1
+  tag_id: 3
